--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JS logger",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/robtucker/isolog/issues"
   },
-  "homepage": "https://github.com/robtucker/isolog#readme"
+  "homepage": "https://github.com/robtucker/isolog#readme",
+  "dependencies": {
+    "lodash": "^4.16.6"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
+    "karma": "^1.3.0",
+    "mocha": "^3.1.2",
+    "systemjs": "^0.19.40",
+    "typescript": "^2.0.8"
+  }
 }
