--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JS logger",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "mocha --opts mocha.opts"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,14 @@
     "lodash": "^4.16.6"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-preset-es2015": "^6.18.0",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/sinon": "^1.16.31",
     "chai": "^3.5.0",
-    "karma": "^1.3.0",
+    "chai-spies": "^0.7.1",
     "mocha": "^3.1.2",
-    "systemjs": "^0.19.40",
+    "sinon": "^2.0.0-pre.4",
+    "ts-node": "^1.7.0",
     "typescript": "^2.0.8"
   }
 }
