--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "isolog",
   "version": "0.1.0",
   "description": "JS logger",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "coverage": "jest --coverage",
     "prepublishOnly": "npm test && rm -rf ./dist && npm run build",
@@ -42,6 +42,7 @@
     "sinon": "^2.0.0-pre.4",
     "ts-jest": "^22.0.1",
     "ts-node": "^1.7.0",
+    "tslib": "^1.9.0",
     "typescript": "^2.0.8"
   },
   "jest": {
