--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
     "compilerOptions": {
         "outDir": "./dist",
-        "sourceMap": false,
-        "noImplicitAny": false,
+        "sourceMap": true,
+        "noImplicitAny": true,
+        "importHelpers": true,
         "moduleResolution": "node",
         "module": "commonjs",
-        "target": "es5"
+        "target": "es5",
+        "baseUrl": "./src",
+        "lib": [
+            "es2017",
+            "dom"
+        ]
     },
     "files": [
         "./src/index.ts"
